Computer Science/Turned In Labs/Finch Lab 1/doc/logfile.txt
Project documentation
<---- javadoc command: ---->
C:\Program Files\Java\jdk1.8.0\bin\javadoc.exe
-sourcepath
C:\Users\alexanderd\Dropbox\School\AP Comp Sci\BlueFinch\SourceFiles
-source
1.8
-classpath
C:\Program Files (x86)\BlueJ\lib\bluejcore.jar;C:\Program Files (x86)\BlueJ\lib\junit-4.8.2.jar;C:\Users\alexanderd\Dropbox\School\AP Comp Sci\RatBots15_05\RatBots15_05.jar;C:\Users\alexanderd\Dropbox\School\AP Comp Sci\GridWorldCodeBlueJ\gridworld.jar;C:\Users\alexanderd\Dropbox\School\AP Comp Sci\BlueFinch\SourceFiles\+libs\finch.jar;C:\Users\alexanderd\Dropbox\School\AP Comp Sci\BlueFinch\SourceFiles
-d
C:\Users\alexanderd\Dropbox\School\AP Comp Sci\BlueFinch\SourceFiles\doc
-encoding
windows-1252
-charset
windows-1252
-docletpath
C:\Program Files (x86)\BlueJ\lib\bjdoclet.jar
-doclet
bluej.doclet.doclets.formats.html.HtmlDoclet
-doctitle
SourceFiles
-windowtitle
SourceFiles
-author
-version
-nodeprecated
-package
-link
http://download.oracle.com/javase/6/docs/api/
customClasses.DancingFinch
rss
looping
simpleOutput
diagnostic
graphics.simonGame
graphics.morseCode
graphics.GestureProgrammer
graphics.GestureProgrammer.GestureProgrammerUtils
graphics.searchGame
conditionals
simpleInput
C:\Users\alexanderd\Dropbox\School\AP Comp Sci\BlueFinch\SourceFiles/FinchTemplateFile.java
<---- end of javadoc command ---->
Loading source file C:\Users\alexanderd\Dropbox\School\AP Comp Sci\BlueFinch\SourceFiles/FinchTemplateFile.java...
Loading source files for package customClasses.DancingFinch...
Loading source files for package rss...
Loading source files for package looping...
Loading source files for package simpleOutput...
Loading source files for package diagnostic...
Loading source files for package graphics.simonGame...
Loading source files for package graphics.morseCode...
Loading source files for package graphics.GestureProgrammer...
Loading source files for package graphics.GestureProgrammer.GestureProgrammerUtils...
Loading source files for package graphics.searchGame...
Loading source files for package conditionals...
Loading source files for package simpleInput...
Constructing Javadoc information...
C:\Users\alexanderd\Dropbox\School\AP Comp Sci\BlueFinch\SourceFiles\graphics\GestureProgrammer\GestureProgrammer.java:4: error: package Code.graphics.GestureProgrammer.GestureProgrammerUtils does not exist
import Code.graphics.GestureProgrammer.GestureProgrammerUtils.*;
^
C:\Users\alexanderd\Dropbox\School\AP Comp Sci\BlueFinch\SourceFiles\graphics\GestureProgrammer\GestureProgrammer.java:18: error: cannot find symbol
   private static GestureProgram recordingProgram = new GestureProgram();
                  ^
  symbol:   class GestureProgram
  location: class GestureProgrammer
C:\Users\alexanderd\Dropbox\School\AP Comp Sci\BlueFinch\SourceFiles\graphics\GestureProgrammer\GestureProgrammer.java:21: error: cannot find symbol
   private static GestureProgram recordedProgram = new GestureProgram();
                  ^
  symbol:   class GestureProgram
  location: class GestureProgrammer
C:\Users\alexanderd\Dropbox\School\AP Comp Sci\BlueFinch\SourceFiles\graphics\GestureProgrammer\GestureProgrammer.java:131: error: cannot find symbol
   private static GestureCommand createGestureCommand(double[] accelerometerState)
                  ^
  symbol:   class GestureCommand
  location: class GestureProgrammer
Standard Doclet version 1.8.0
Building tree for all the packages and classes...
Generating C:\Users\alexanderd\Dropbox\School\AP Comp Sci\BlueFinch\SourceFiles\doc\FinchTemplateFile.html...
Generating C:\Users\alexanderd\Dropbox\School\AP Comp Sci\BlueFinch\SourceFiles\doc\customClasses\DancingFinch\DancingFinch.html...
Generating C:\Users\alexanderd\Dropbox\School\AP Comp Sci\BlueFinch\SourceFiles\doc\customClasses\DancingFinch\DancingFinchDriver.html...
Generating C:\Users\alexanderd\Dropbox\School\AP Comp Sci\BlueFinch\SourceFiles\doc\customClasses\DancingFinch\MidiPlayer.html...
Generating C:\Users\alexanderd\Dropbox\School\AP Comp Sci\BlueFinch\SourceFiles\doc\rss\EarthquakeFinch.html...
Generating C:\Users\alexanderd\Dropbox\School\AP Comp Sci\BlueFinch\SourceFiles\doc\rss\GettheNews.html...
Generating C:\Users\alexanderd\Dropbox\School\AP Comp Sci\BlueFinch\SourceFiles\doc\rss\MovieCritic.html...
Generating C:\Users\alexanderd\Dropbox\School\AP Comp Sci\BlueFinch\SourceFiles\doc\rss\WeatherFinch.html...
Generating C:\Users\alexanderd\Dropbox\School\AP Comp Sci\BlueFinch\SourceFiles\doc\looping\AfraidFinch.html...
Generating C:\Users\alexanderd\Dropbox\School\AP Comp Sci\BlueFinch\SourceFiles\doc\looping\AlwaysUpHill.html...
Generating C:\Users\alexanderd\Dropbox\School\AP Comp Sci\BlueFinch\SourceFiles\doc\looping\AvoidObstacles.html...
Generating C:\Users\alexanderd\Dropbox\School\AP Comp Sci\BlueFinch\SourceFiles\doc\looping\FinchControlsFinch.html...
Generating C:\Users\alexanderd\Dropbox\School\AP Comp Sci\BlueFinch\SourceFiles\doc\looping\FinchOrientations.html...
Generating C:\Users\alexanderd\Dropbox\School\AP Comp Sci\BlueFinch\SourceFiles\doc\looping\HearingTest.html...
Generating C:\Users\alexanderd\Dropbox\School\AP Comp Sci\BlueFinch\SourceFiles\doc\looping\Spiral.html...
Generating C:\Users\alexanderd\Dropbox\School\AP Comp Sci\BlueFinch\SourceFiles\doc\simpleOutput\Dance.html...
Generating C:\Users\alexanderd\Dropbox\School\AP Comp Sci\BlueFinch\SourceFiles\doc\simpleOutput\HelloWorld.html...
Generating C:\Users\alexanderd\Dropbox\School\AP Comp Sci\BlueFinch\SourceFiles\doc\diagnostic\dutyTester1.html...
Generating C:\Users\alexanderd\Dropbox\School\AP Comp Sci\BlueFinch\SourceFiles\doc\diagnostic\FinchTester.html...
Generating C:\Users\alexanderd\Dropbox\School\AP Comp Sci\BlueFinch\SourceFiles\doc\diagnostic\MultiFinchTester.html...
Generating C:\Users\alexanderd\Dropbox\School\AP Comp Sci\BlueFinch\SourceFiles\doc\graphics\simonGame\FinchGame.html...
Generating C:\Users\alexanderd\Dropbox\School\AP Comp Sci\BlueFinch\SourceFiles\doc\graphics\simonGame\FinchGameWindow.html...
Generating C:\Users\alexanderd\Dropbox\School\AP Comp Sci\BlueFinch\SourceFiles\doc\graphics\morseCode\MorseCodeBeeper.html...
Generating C:\Users\alexanderd\Dropbox\School\AP Comp Sci\BlueFinch\SourceFiles\doc\graphics\morseCode\MorseCodeFrame.html...
Generating C:\Users\alexanderd\Dropbox\School\AP Comp Sci\BlueFinch\SourceFiles\doc\graphics\GestureProgrammer\GestureProgrammer.html...
Generating C:\Users\alexanderd\Dropbox\School\AP Comp Sci\BlueFinch\SourceFiles\doc\graphics\GestureProgrammer\GestureProgrammerUtils\FinchSimViewPanel.html...
Generating C:\Users\alexanderd\Dropbox\School\AP Comp Sci\BlueFinch\SourceFiles\doc\graphics\GestureProgrammer\GestureProgrammerUtils\GestureCommand.html...
Generating C:\Users\alexanderd\Dropbox\School\AP Comp Sci\BlueFinch\SourceFiles\doc\graphics\GestureProgrammer\GestureProgrammerUtils\GestureCommand.StopCommand.html...
Generating C:\Users\alexanderd\Dropbox\School\AP Comp Sci\BlueFinch\SourceFiles\doc\graphics\GestureProgrammer\GestureProgrammerUtils\GestureProgram.html...
Generating C:\Users\alexanderd\Dropbox\School\AP Comp Sci\BlueFinch\SourceFiles\doc\graphics\GestureProgrammer\GestureProgrammerUtils\GestureProgrammerView.html...
Generating C:\Users\alexanderd\Dropbox\School\AP Comp Sci\BlueFinch\SourceFiles\doc\graphics\GestureProgrammer\GestureProgrammerUtils\GestureProgrammerView.State.html...
4 warnings
